.btn spacing fix

--- a/content/themes/pvshop/css/pv-boutique.css
+++ b/content/themes/pvshop/css/pv-boutique.css
@@ -66,7 +66,7 @@ a {
   background: #dcdbd6;
   border: 1px solid #333;
   display: inline-block;
-  padding: .5em .5em .25em .5em;
+  padding: .65em .75em .55em .75em;
   margin: 0;
   font-size: 12px;
   line-height: 12px;
