--- a/content/themes/pvshop/sass/base/_general.scss
+++ b/content/themes/pvshop/sass/base/_general.scss
@@ -24,7 +24,8 @@ a {
 	background: #dcdbd6;
 	border: 1px solid #333;
 	display: inline-block;
-	padding: .5em .5em .25em .5em;
+	// XXX magic numbers abound!
+	padding: .65em .75em .55em .75em;
 	margin: 0;
 	font-size: 12px;
 	line-height: 12px;
